# matmul

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  common.hpp  cpu.cpp  gpu.cpp  kernel.metal
